content/kubernetes/configuration/argo/rollout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-ingress
  namespace: argo-rollouts
spec:
  ingressClassName: nginx
  rules:
    - host: argo-rollouts.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
